# jitter-using-cmake

./: .gitignore  CMakeLists.txt  README.md  izmir-main.c  izmir-syntax.c  izmir-syntax.h  izmir.l  izmir.y  izmirvm-minimal-main.c  izmirvm.jitter  julia_shared_checks.jl  play_vm.py  python_shared_checks.py  silly-1.iz  vm-tests.txt  vm-tests2.txt
